# hurley

./: .gitignore  Cargo.toml  LICENSE  README.md  test_data.json
docs/: medium_article.md  medium_article_en.md
src/: cli.rs  error.rs  main.rs
src/http/: client.rs  mod.rs  request.rs  response.rs
src/perf/: dataset.rs  metrics.rs  mod.rs  report.rs  runner.rs
